dataset1235/2025-2/2318198438/users/867892000/executions/2601575092_1467685783.log
== RUN (2025-08-12 17:15:52)
-- CODE: 
a= 35
b = 20
total = a * b
prnt ("total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt ("total")
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt ("total")
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:16:45)
-- CODE: 
a= 35
b = 20
print ("a*b")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
a*b
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
a*b
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:17:23)
-- CODE: 
print("20*35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
20*35
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
20*35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:15:50)
-- CODE: 
a= 35
b = 20
total = a * b
prnt ("total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt ("total")
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt ("total")
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:18:22)
-- CODE: 
a = int(input(""))
b = int(input(""))
c = a*b
print("c")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input(""))
        ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input(""))
        ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:16:08)
-- CODE: 
a= 35
b = 20
total = a * b
print ("total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
total
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:16:13)
-- CODE: 
a= 35
b = 20
total = a * b
print ("total")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
total
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:17:16)
-- CODE: 
print("20*35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
20*35
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
20*35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:15:59)
-- CODE: 
a= 35
b = 20
total = a * b
print ("total")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
total
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:16:46)
-- CODE: 
a= 35
b = 20
print ("a*b")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
a*b
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
a*b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:14:40)
-- CODE: 
var = 35
var2 = 20
total = var * var2
prnt (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:15:29)
-- CODE: 
a= 35
b = 20
total = a * b
prnt (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:19:39)
-- CODE: 
a = 20
b = 35
c = a*b
print(c)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:17:20)
-- CODE: 
print("20*35")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
20*35
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
20*35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:16:09)
-- CODE: 
a= 35
b = 20
total = a * b
print ("total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
total
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:16:16)
-- CODE: 
a= 35
b = 20
total = a * b
print ("total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
total
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:15:32)
-- CODE: 
a= 35
b = 20
total = a * b
prnt (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:14:57)
-- CODE: 
var1= 35
var2 = 20
total = var1 * var2
prnt (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:16:03)
-- CODE: 
a= 35
b = 20
total = a * b
print ("total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
total
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:19:38)
-- CODE: 
a = 20
b = 35
c = a*b
print(c)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:14:59)
-- CODE: 
var1= 35
var2 = 20
total = var1 * var2
prnt (total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prnt (total)
    ^^^^
NameError: name 'prnt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
